--- a/asteroids.html
+++ b/asteroids.html
@@ -17,6 +17,9 @@
       const ROIDS_SIZE = 60; // starting size of asteroids in pixels
       const ROIDS_VERT = 10; // average number of vertices on each asteroid
       const ROIDS_SPD = 50; // max starting speed of asteroids in pixels per second
+      const ROID_PTS_LGE = 20; // large asteroid score
+      const ROID_PTS_MED = 50; // medium asteroid score
+      const ROID_PTS_SML = 100; // small asteroid score
       const LASER_MAX = 10; // max num of lasers on screen at once
       const LASER_SPD = 500; // speed of lasers in pixels per second
       const LASER_DIST = 0.4; // max distance laser as a fraction of screen with
@@ -36,7 +39,7 @@
       var ctx = canv.getContext("2d");
 
       //set up the game parameters
-      var level, lives, roids, ship, text, textAlpha;
+      var level, lives, roids, score, scoreHigh, ship, text, textAlpha;
       newGame();
 
       // set up event handlers
@@ -68,9 +71,13 @@
         if (r == Math.ceil(ROIDS_SIZE / 2)) {
           roids.push(newAsteroid(x, y, Math.ceil(ROIDS_SIZE / 4)));
           roids.push(newAsteroid(x, y, Math.ceil(ROIDS_SIZE / 4)));
+          score += ROID_PTS_LGE;
         } else if (r == Math.ceil(ROIDS_SIZE / 4)) {
           roids.push(newAsteroid(x, y, Math.ceil(ROIDS_SIZE / 8)));
           roids.push(newAsteroid(x, y, Math.ceil(ROIDS_SIZE / 8)));
+          score += ROID_PTS_MED;
+        } else {
+          score += ROID_PTS_SML;
         }
         // destroy the asteroid
         roids.splice(index, 1);
@@ -185,6 +192,7 @@
       function newGame() {
         level = 0;
         lives = GAME_LIVES;
+        score = 0;
         ship = newShip();
         newLevel();
       }
@@ -361,7 +369,7 @@
 
         // check asteroids collision
         if (!exploding) {
-          if (ship.blinkNum == 0) {
+          if (ship.blinkNum == 0 && !ship.dead) {
             for (var i = 0; i < roids.length; i++) {
               if (
                 distBetweenPoints(ship.x, ship.y, roids[i].x, roids[i].y) <
@@ -502,6 +510,16 @@
             0.5 * Math.PI
           ); //90º in radians
         }
+        // draw the score
+        ctx.textAlign = "right";
+        ctx.textBaseline = "middle";
+        ctx.fillStyle = "white";
+        ctx.font =  "13px Helvetica";
+        ctx.fillText(
+          "Score " + score,
+          canv.width - SHIP_SIZE * 1.1,
+          SHIP_SIZE * 1.3
+        );
       }
     </script>
   </body>
