--- a/asteroids.html
+++ b/asteroids.html
@@ -79,6 +79,11 @@
         } else {
           score += ROID_PTS_SML;
         }
+        // check high score
+        if (score > scoreHigh) {
+          scoreHigh = score;
+        }
+
         // destroy the asteroid
         roids.splice(index, 1);
 
@@ -193,6 +198,7 @@
         level = 0;
         lives = GAME_LIVES;
         score = 0;
+        scoreHigh = 100;
         ship = newShip();
         newLevel();
       }
@@ -514,10 +520,21 @@
         ctx.textAlign = "right";
         ctx.textBaseline = "middle";
         ctx.fillStyle = "white";
-        ctx.font =  "13px Helvetica";
+        ctx.font = "13px Helvetica";
         ctx.fillText(
           "Score " + score,
           canv.width - SHIP_SIZE * 1.1,
+          SHIP_SIZE * 1.3
+        );
+
+        // draw the high score
+        ctx.textAlign = "center";
+        ctx.textBaseline = "middle";
+        ctx.fillStyle = "white";
+        ctx.font = "12px Helvetica";
+        ctx.fillText(
+          "High Score " + scoreHigh,
+          canv.width / 2,
           SHIP_SIZE * 1.3
         );
       }
